<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2016 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->

<resources>
    <string name="app_name">WhatAreYouWaitingFor?</string>
    <string name="hint_word">Word...</string>
    <string name="hint_definition">Definition...</string>
    <string name="button_save">Save</string>
    <string name="button_new">New</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="insertar_tarea">Insertar tarea:</string>
    <string name="inserte_su_tarea_aqui">Inserte su tarea aqui</string>
    <string name="fecha_informacion">Fecha de creacion:</string>
    <string name="fecha">FECHA</string>
    <string name="hora">HORA</string>
    <string name="marque_si_termino_la_tarea">Marque si termino la tarea:</string>
    <string name="tarea">TAREA</string>
    <string name="horam">Horam</string>
    <string name="fecham">fecham</string>
    <string name="completada">Completada</string>
</resources>