<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tareafinalizacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tarea"
            android:textColor="@color/tareaterminadacolor"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fechafinalizacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/fecham" />

            <TextView
                android:id="@+id/horafinalizacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horam" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/colorPrimary" />

</LinearLayout>