<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2016 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tareamostrada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tarea"
                android:textColor="@color/tareacolor"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fechamostrada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/fecham" />

                <TextView
                    android:id="@+id/horamostrada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/horam" />
            </LinearLayout>

        </LinearLayout>

        <CheckBox
            android:id="@+id/tareaterminada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/completado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margen"
            android:text="@string/completada"
            android:layout_gravity="center"/>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/colorPrimary" />

</LinearLayout>