<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2016 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margen">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/margen"
            android:text="@string/insertar_tarea"
            android:textColor="@color/colortextview"
            android:textSize="@dimen/textview_size" />

        <EditText
            android:id="@+id/tareainsertada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/margen" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margen">

        <TextView
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margen"
            android:text="@string/fecha_informacion"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colortextview"
            android:textSize="@dimen/textview_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fechacreada"
            android:layout_gravity="center_vertical"
            android:text="@string/fecha"
            android:layout_margin="@dimen/margen" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/horacreada"
            android:layout_gravity="center_vertical"
            android:text="@string/hora"
            android:layout_margin="@dimen/margen"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margen">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textview_size"
            android:text="@string/marque_si_termino_la_tarea"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colortextview"
            android:layout_margin="@dimen/margen"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/margen"
            android:id="@+id/idcheckbox"/>

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:text="Agregar"
        android:onClick="returnReply"
        android:layout_gravity="center"/>


</LinearLayout>